2004-02-04  ------ omnetpp-3.0pre1 released ------

2003-11-09  Andras Varga

	* initial checkin of dynamic network building code.