@@ -1,3 +1,9 @@
+2004-02-09  Andras Varga
+
+	* loading of simple module interfaces from NED files made possible
+
+	* fixed bug in "sizeof" handling
+
 2004-02-04  ------ omnetpp-3.0pre1 released ------
 
 2003-11-09  Andras Varga
